--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">COntact</a></li>
+                        <li><a href="#">Contact</a></li>
                         <li><a href="#"><i class="fas fa-search"></i></a></li>
                     </ul>
                     <div class="hamberger">
