add some header

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
 
         <div class="discount-title">
             <div class="container">
-
+                <div class="discount-title-wrapper">
+                    <div class="discount-title-box">
+                        <h1>Discount 50%</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident molestias facilis porro iste, harum illo. </p>
+                         <a href="#" class="dicount-btn">Order Now</a>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
