add all header outliner

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <header>
         <nav>
             <div class="container">
-                <div class="nav-warapper">
+                <div class="nav-wrapper">
                     <div class="logo">
                         <a href="#"><img src="assets/img/logo.png" alt=""></a>
                     </div>
                     <ul class="menu">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Product</a></li>
+                        <li><a href="#">Promo</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#"><i class="fas fa-search"></i></a></li>
                     </ul>
-                    <div class="hamberger">
+                    <div class="hamburger">
                         <i class="fas fa-bars"></i>
                     </div>
                 </div>
-
             </div>
         </nav>
 
@@ -38,7 +38,7 @@
                     <div class="discount-title-box">
                         <h1>Discount 50%</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident molestias facilis porro iste, harum illo. </p>
-                         <a href="#" class="dicount-btn">Order Now</a>
+                         <a href="#" class="discount-btn">Order Now</a>
                     </div>
                 </div>
             </div>
