popular menu section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,45 @@
         </div>
     </header>
 
+    <section class="popular-menu">
+        <div class="container">
+            <div class="popular-menu-title">
+                <h2>Popular Menu</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Perspiciatis praesentium eos, ex quam expedita odio.
+                </p>
+            </div>
+
+            <div class="popular-menu-grid">
+                <div class="popular-menu-item">
+                    <img src="assets/img/package-1.png" alt="">
+                    <h3>Package l</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, at?
+                    </p>
+                </div>
+                <div class="popular-menu-item">
+                    <img src="assets/img/package-2.png" alt="">
+                    <h3>Package ll</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, at?
+                    </p>
+                </div>
+                <div class="popular-menu-item">
+                    <img src="assets/img/package-3.png" alt="">
+                    <h3>Package lll</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, at?
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </section>
+
     <script src="assets/js/script.js"></script>
     
 </body>
